# SolLottery

./: README.md
lottery-game/: .gitignore  Anchor.toml  Cargo.toml  package.json  tsconfig.json
lottery-game/app/: README.md  index.html  styles.css
lottery-game/app/js/: index.js  solana.js
lottery-game/programs/lottery-game/: Cargo.toml
lottery-game/programs/lottery-game/src/: lib.rs
lottery-game/test/: lottery_game.ts
